public/nopbai/Logs/demo1/[1][18582835856][demo1][h][A].c.log
Compile Error
[1][18582835856][demo1][h][A].c:1:1: error: unknown type name 'Thanh'
 Thanh Nhan
 ^~~~~
[1][18582835856][demo1][h][A].c:1:1: error: expected '=', ',', ';', 'asm' or '__attribute__' at end of input
